wrap error with stack
