# router/api/api_user.go
@@ -2,10 +2,8 @@ package api
 
 import (
 	"gin-essential/ginx"
-	"gin-essential/logger"
 	"gin-essential/schema"
 	"gin-essential/srv"
-	"log"
 
 	"gin-essential/pkg/errors"
 	jwtauth "gin-essential/pkg/jwt"
@@ -13,7 +11,6 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/google/wire"
-	"go.uber.org/zap"
 )
 
 // UserSet 注入User
@@ -25,6 +22,16 @@ type User struct {
 }
 
 // Register 注册
+// @Tags Users 用户
+// @Summary 注册
+// @Description 注册
+// @Accept json
+// @Produce json
+// @Param body body schema.User true "用户"
+// @Success 200 {object} schema.UserQueryResult "{staus:"OK", data:响应数据}"
+// @Failure 400 {object} schema.ErrorItem "{code:400, status:"OK", message:"请求参数错误"}"
+// @Failure 404 {object} schema.ErrorItem "{code:404, status:"OK", message:"资源不存在"}"
+// @Router /api/users [post]
 func (a *User) Register(c *gin.Context) {
 	ctx := c.Request.Context()
 	// 获取参数
@@ -76,7 +83,6 @@ func (a *User) NatsMessage(c *gin.Context) {
 // @Failure 404 {object} schema.ErrorItem "{code:404, status:"OK", message:"资源不存在"}"
 // @Router /api/users [get]
 func (a *User) Query(c *gin.Context) {
-	log.Println(c.Request.Host, c.Request.RequestURI, c.Request.URL)
 	var params schema.UserQueryParams
 	if err := ginx.ParseQuery(c, &params); err != nil {
 		ginx.ResError(c, err)
@@ -89,7 +95,6 @@ func (a *User) Query(c *gin.Context) {
 		ginx.ResError(c, err)
 		return
 	}
-	logger.Logger.Info("user list:", zap.Any("users", userResult.List))
 	ginx.ResPage(c, userResult.List, userResult.Pagination)
 }
 
